Bug 327051 - custom line width is applied but check box selection isn't
Summary: custom line width is applied but check box selection isn't
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.10.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-02 20:48 UTC by Barade
Modified: 2013-11-12 21:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Barade 2013-11-02 20:48:39 UTC
After selecting the check box for custom line width it was applied after restarting Umbrello but the checkbox is not checked anymore. The line width value is still correct.

Reproducible: Always
Comment 1 Ralf Habacker 2013-11-03 00:03:05 UTC
This belongs to the umbrello gui settings dialogs
Comment 2 Ralf Habacker 2013-11-04 08:55:25 UTC
I took a look at the behavior of the other "custom..." attributes. With "custom..." unselected, which is the default, an attribute is disabled and could not be changed. With "custom..." selected, the attribute is editable. 

The states of the "custom..." checkboxs are not saved into the umbrello config file. The initial state is determined by comparing the related attribute value fetched from the config file against a default value, which happens in umbrello/dialogs/settingsdialog.cpp:346 ff. 

This part seems not to be implemented for the "Custom line width" checkbox.
Comment 3 Ralf Habacker 2013-11-04 09:13:33 UTC
Git commit b6e41ea25561e5f2dd244a5305d6c292b0ed2d8d by Ralf Habacker.
Committed on 04/11/2013 at 09:11.
Pushed by habacker into branch 'master'.

Fixed "custom line width is applied but check box selection isn't"
FIXED-IN:4.11.3

M  +22   -1    umbrello/dialogs/settingsdlg.cpp
M  +1    -0    umbrello/dialogs/settingsdlg.h

http://commits.kde.org/umbrello/b6e41ea25561e5f2dd244a5305d6c292b0ed2d8d
Comment 4 Ralf Habacker 2013-11-04 09:16:28 UTC
Git commit 566286e4f9ba1a65df40722416883b605b27138e by Ralf Habacker.
Committed on 04/11/2013 at 09:11.
Pushed by habacker into branch 'KDE/4.11'.

Fixed "custom line width is applied but check box selection isn't"
FIXED-IN:4.11.3

Conflicts:
	umbrello/dialogs/settingsdlg.cpp

M  +22   -1    umbrello/dialogs/settingsdlg.cpp
M  +1    -0    umbrello/dialogs/settingsdlg.h

http://commits.kde.org/umbrello/566286e4f9ba1a65df40722416883b605b27138e