Fixed "custom line width is applied but check box selection isn't"

BUG:327051
FIXED-IN:4.11.3

Conflicts:
	umbrello/dialogs/settingsdlg.cpp